--- a/package.json
+++ b/package.json
@@ -26,10 +26,11 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-fastify": "^10.3.3",
     "@nestjs/typeorm": "^10.0.2",
-    "bcrypt": "^5.1.1",
     "axios": "^1.6.7",
+    "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "dotenv": "^16.4.5",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
@@ -66,7 +67,9 @@
       "ts"
     ],
     "rootDir": "./",
-    "modulePaths": ["<rootDir>"],
+    "modulePaths": [
+      "<rootDir>"
+    ],
     "testRegex": ".*\\.spec\\.ts$",
     "transform": {
       "^.+\\.(t|j)s$": "ts-jest"
