--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "cron": "^3.1.7",
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
+    "groq-sdk": "^0.3.3",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
